--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.hylink.chexunjingwu"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 4
-        versionName "1.0.0.4"
+        versionCode 5
+        versionName "1.0.0.5"
         flavorDimensions "versionCode"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -59,13 +59,16 @@ android {
 
 
         互联网 {
-            buildConfigField("String", "BASE_URL", "\"http://111.42.38.120:9000/gacz-data-test-service/\"")
+            applicationId "com.hylink.chexunjingwu"
+            buildConfigField("String", "BASE_URL", "\"http://192.168.104.151:7701/\"")
+//            buildConfigField("String", "BASE_URL", "\"http://111.42.38.120:9000/gacz-data-test-service/\"")
             buildConfigField("String", "TCP_MQTT", "\"tcp://111.42.38.120:1883\"")
             buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
 
             manifestPlaceholders = [
                     ENTRY_ACTION  : "android.intent.action.MAIN",
-                    ENTRY_CATEGORY: "android.intent.category.LAUNCHER"
+                    ENTRY_CATEGORY: "android.intent.category.LAUNCHER",
+                    APP_NAME      : "车巡警务协同"
             ]
             buildConfigField("String", "REG_ID", "\"330000100115\"")
             buildConfigField("String", "CLIENT_ID", "\"35D6F3BCDDC05176A39352D7F2747657\"")
@@ -73,12 +76,14 @@ android {
         }
 
         浙江 {
+            applicationId "com.hylink.chexunjingwu"
             buildConfigField("String", "BASE_URL", "\"http://20.65.2.12:1728/gacz-data-service/\"")
             buildConfigField("String", "TCP_MQTT", "\"tcp://20.65.3.207:1887\"")
             buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
             manifestPlaceholders = [
                     ENTRY_ACTION  : "pstore.intent.action.MAIN",
-                    ENTRY_CATEGORY: "pstore.intent.category.APP"
+                    ENTRY_CATEGORY: "pstore.intent.category.APP",
+                    APP_NAME      : "浙江车巡警务协同"
             ]
 
             buildConfigField("String", "REG_ID", "\"330000100115\"")
@@ -87,13 +92,32 @@ android {
 
         }
 
+        钱塘 {
+            applicationId "com.hylink.qiantang_chexunjingwu"
+
+            buildConfigField("String", "BASE_URL", "\"http://20.65.2.12:3880/gacz-data-service/\"")
+            buildConfigField("String", "TCP_MQTT", "\"tcp://20.65.3.207:1886\"")
+            buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
+            manifestPlaceholders = [
+                    ENTRY_ACTION  : "pstore.intent.action.MAIN",
+                    ENTRY_CATEGORY: "pstore.intent.category.APP",
+                    APP_NAME      : "钱塘车巡警务协同"
+            ]
+
+            buildConfigField("String", "REG_ID", "\"330000101134\"")
+            buildConfigField("String", "CLIENT_ID", "\"8C4A64D1DED0A2FDDC371F08CC92DA6A\"")
+
+        }
+
         浙江测试 {
-            buildConfigField("String", "BASE_URL", "\"http://20.65.2.12:1728/gacz-data-service/\"")
+            applicationId "com.hylink.zhejiang_chexunjingwu"
+            buildConfigField("String", "BASE_URL", "\"http://20.65.1.191:8081/platform/redirect/\"")
             buildConfigField("String", "TCP_MQTT", "\"tcp://111.42.38.120:1883\"")
             buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
             manifestPlaceholders = [
                     ENTRY_ACTION  : "android.intent.action.MAIN",
-                    ENTRY_CATEGORY: "android.intent.category.LAUNCHER"
+                    ENTRY_CATEGORY: "android.intent.category.LAUNCHER",
+                    APP_NAME      : "浙江测试车巡警务"
             ]
 
             buildConfigField("String", "REG_ID", "\"330000100115\"")
