--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hylink.chexunjingwu"
-    android:versionCode="4"
-    android:versionName="1.0.0.4">
+    android:versionCode="5"
+    android:versionName="1.0.0.5">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -93,7 +93,7 @@
         android:name="com.hylink.chexunjingwu.base.App"
         android:allowBackup="true"
         android:icon="@mipmap/logo_a"
-        android:label="@string/app_name"
+        android:label="${APP_NAME}"
         android:networkSecurityConfig="@xml/network_config"
         android:roundIcon="@mipmap/logo_a"
         android:supportsRtl="true"
