--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.hylink.chexunjingwu"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 6
-        versionName "1.0.0.6"
+        versionCode 9
+        versionName "1.0.0.9"
         flavorDimensions "versionCode"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -27,6 +27,13 @@ android {
 
 
     signingConfigs {
+
+        debug {
+            storeFile file('../hlink.jks')
+            keyAlias 'hlink'
+            keyPassword 'hlk1234'
+            storePassword 'hlk123'
+        }
         release {
             storeFile file('../hlink.jks')
             keyAlias 'hlink'
@@ -39,7 +46,7 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             matchingFallbacks = ['互联网', 'release', 'debug']
         }
 
