--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hylink.chexunjingwu"
-    android:versionCode="6"
-    android:versionName="1.0.0.6">
+    android:versionCode="9"
+    android:versionName="1.0.0.9">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -174,6 +174,16 @@
             android:screenOrientation="portrait" >
 
         </activity>
+
+        <provider
+            android:name=".contentprovider.CxjwFileProvider"
+            android:authorities="com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
 
