--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,11 @@ android {
         applicationId "com.hylink.chexunjingwu"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 9
-        versionName "1.0.0.9"
+        versionCode 16
+        versionName "1.0.0.${versionCode}"
         flavorDimensions "versionCode"
         multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildFeatures {
@@ -47,14 +47,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
-            matchingFallbacks = ['互联网', 'release', 'debug']
+            matchingFallbacks = ['release', 'debug']
         }
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
-            matchingFallbacks = ['互联网', 'release', 'debug']
+            matchingFallbacks = ['release', 'debug']
         }
     }
 
@@ -67,15 +67,17 @@ android {
 
         互联网 {
             applicationId "com.hylink.chexunjingwu"
-            buildConfigField("String", "BASE_URL", "\"http://192.168.104.151:7701/\"")
-//            buildConfigField("String", "BASE_URL", "\"http://111.42.38.120:9000/gacz-data-test-service/\"")
+//            buildConfigField("String", "BASE_URL", "\"http://192.168.104.151:7701/\"")
+            buildConfigField("String", "BASE_URL", "\"http://111.42.38.120:9000/gacz-data-test-service/\"")
             buildConfigField("String", "TCP_MQTT", "\"tcp://111.42.38.120:1883\"")
             buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
 
             manifestPlaceholders = [
                     ENTRY_ACTION  : "android.intent.action.MAIN",
                     ENTRY_CATEGORY: "android.intent.category.LAUNCHER",
-                    APP_NAME      : "车巡警务协同"
+                    APP_NAME      : "车巡警务协同",
+                    CxjwFileProvider:"com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
+
             ]
             buildConfigField("String", "REG_ID", "\"330000100115\"")
             buildConfigField("String", "CLIENT_ID", "\"35D6F3BCDDC05176A39352D7F2747657\"")
@@ -90,7 +92,10 @@ android {
             manifestPlaceholders = [
                     ENTRY_ACTION  : "pstore.intent.action.MAIN",
                     ENTRY_CATEGORY: "pstore.intent.category.APP",
-                    APP_NAME      : "浙江车巡警务协同"
+                    APP_NAME      : "浙江车巡警务协同",
+                    CxjwFileProvider:"com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
+
+
             ]
 
             buildConfigField("String", "REG_ID", "\"330000100115\"")
@@ -108,7 +113,8 @@ android {
             manifestPlaceholders = [
                     ENTRY_ACTION  : "pstore.intent.action.MAIN",
                     ENTRY_CATEGORY: "pstore.intent.category.APP",
-                    APP_NAME      : "钱塘车巡警务协同"
+                    APP_NAME      : "钱塘车巡警务协同",
+                    CxjwFileProvider:"com.hylink.qiantang_chexunjingwu.contentprovider.CxjwFileProvider"
             ]
 
             buildConfigField("String", "REG_ID", "\"330000101134\"")
@@ -124,7 +130,8 @@ android {
             manifestPlaceholders = [
                     ENTRY_ACTION  : "android.intent.action.MAIN",
                     ENTRY_CATEGORY: "android.intent.category.LAUNCHER",
-                    APP_NAME      : "浙江测试车巡警务"
+                    APP_NAME      : "浙江测试车巡警务",
+                    CxjwFileProvider:"com.hylink.zhejiang_chexunjingwu.contentprovider.CxjwFileProvider"
             ]
 
             buildConfigField("String", "REG_ID", "\"330000100115\"")
@@ -206,7 +213,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 //    implementation("com.github.lygttpod:SuperTextView:2.4.2")
     implementation 'com.jeremyliao:live-event-bus-x:1.7.2'
@@ -231,6 +238,8 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.1'      //mqtt
 
     implementation 'com.blankj:utilcodex:1.30.6'//  AndroidUtilCode
+
+//    implementation 'com.kongzue.dialog_v3x:dialog:3.2.4'
 
 //    implementation 'androidx.paging:paging-runtime:3.0.0-beta01'// 分页功能
 
