--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hylink.chexunjingwu"
-    android:versionCode="9"
-    android:versionName="1.0.0.9">
+    android:versionCode="16"
+    android:versionName="1.0.0.16">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -177,7 +177,7 @@
 
         <provider
             android:name=".contentprovider.CxjwFileProvider"
-            android:authorities="com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
+            android:authorities="${CxjwFileProvider}"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -195,12 +195,12 @@
         <!--        //移动端服务-->
         <meta-data
             android:name="com.mapabc.search.service"
-            android:value="http://20.0.0.50:25001/as" />
+            android:value="http://20.65.2.12:1555/as" />
 
         <!--        // 移动端服务-->
         <meta-data
             android:name="com.mapabc.map.service"
-            android:value="http://20.0.0.50:15007" />
+            android:value="http://20.65.2.12:1556" />
 
 
         <meta-data
