--- a/app/build.gradle
+++ b/app/build.gradle
@@ -213,7 +213,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
+//    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
+    implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 //    implementation("com.github.lygttpod:SuperTextView:2.4.2")
     implementation 'com.jeremyliao:live-event-bus-x:1.7.2'
