--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.hylink.chexunjingwu"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 16
-        versionName "1.0.0.${versionCode}"
+        versionCode 1001
+        versionName "1.0.0.1"
         flavorDimensions "versionCode"
         multiDexEnabled true
 
@@ -64,7 +64,6 @@ android {
      */
     productFlavors {
 
-
         互联网 {
             applicationId "com.hylink.chexunjingwu"
 //            buildConfigField("String", "BASE_URL", "\"http://192.168.104.151:7701/\"")
@@ -73,71 +72,36 @@ android {
             buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
 
             manifestPlaceholders = [
-                    ENTRY_ACTION  : "android.intent.action.MAIN",
-                    ENTRY_CATEGORY: "android.intent.category.LAUNCHER",
-                    APP_NAME      : "车巡警务协同",
-                    CxjwFileProvider:"com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
+                    ENTRY_ACTION    : "android.intent.action.MAIN",
+                    ENTRY_CATEGORY  : "android.intent.category.LAUNCHER",
+                    APP_NAME        : "车巡警务协同",
+                    CxjwFileProvider: "com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
 
             ]
             buildConfigField("String", "REG_ID", "\"330000100115\"")
             buildConfigField("String", "CLIENT_ID", "\"35D6F3BCDDC05176A39352D7F2747657\"")
 
         }
-
-        浙江 {
+        天津 {
             applicationId "com.hylink.chexunjingwu"
-            buildConfigField("String", "BASE_URL", "\"http://20.65.2.12:1728/gacz-data-service/\"")
-            buildConfigField("String", "TCP_MQTT", "\"tcp://20.65.3.207:1887\"")
-            buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
-            manifestPlaceholders = [
-                    ENTRY_ACTION  : "pstore.intent.action.MAIN",
-                    ENTRY_CATEGORY: "pstore.intent.category.APP",
-                    APP_NAME      : "浙江车巡警务协同",
-                    CxjwFileProvider:"com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
-
-
-            ]
-
-            buildConfigField("String", "REG_ID", "\"330000100115\"")
-            buildConfigField("String", "CLIENT_ID", "\"35D6F3BCDDC05176A39352D7F2747657\"")
-
-
-        }
-
-        钱塘 {
-            applicationId "com.hylink.qiantang_chexunjingwu"
-
-            buildConfigField("String", "BASE_URL", "\"http://20.65.2.12:3880/gacz-data-service/\"")
-            buildConfigField("String", "TCP_MQTT", "\"tcp://20.65.3.207:1886\"")
-            buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
-            manifestPlaceholders = [
-                    ENTRY_ACTION  : "pstore.intent.action.MAIN",
-                    ENTRY_CATEGORY: "pstore.intent.category.APP",
-                    APP_NAME      : "钱塘车巡警务协同",
-                    CxjwFileProvider:"com.hylink.qiantang_chexunjingwu.contentprovider.CxjwFileProvider"
-            ]
-
-            buildConfigField("String", "REG_ID", "\"330000101134\"")
-            buildConfigField("String", "CLIENT_ID", "\"8C4A64D1DED0A2FDDC371F08CC92DA6A\"")
-
-        }
-
-        浙江测试 {
-            applicationId "com.hylink.zhejiang_chexunjingwu"
-            buildConfigField("String", "BASE_URL", "\"http://20.65.1.191:8081/platform/redirect/\"")
+//            buildConfigField("String", "BASE_URL", "\"http://192.168.104.151:7701/\"")
+            buildConfigField("String", "BASE_URL", "\"http://111.42.38.120:9000/gacz-data-test-service/\"")
             buildConfigField("String", "TCP_MQTT", "\"tcp://111.42.38.120:1883\"")
             buildConfigField("String", "PGIS_SERVICE", "\"http://20.115.11.64:6080/arcgis/rest/services/whsl/MapServer\"")
-            manifestPlaceholders = [
-                    ENTRY_ACTION  : "android.intent.action.MAIN",
-                    ENTRY_CATEGORY: "android.intent.category.LAUNCHER",
-                    APP_NAME      : "浙江测试车巡警务",
-                    CxjwFileProvider:"com.hylink.zhejiang_chexunjingwu.contentprovider.CxjwFileProvider"
-            ]
 
+            manifestPlaceholders = [
+                    ENTRY_ACTION    : "android.intent.action.MAIN",
+                    ENTRY_CATEGORY  : "android.intent.category.LAUNCHER",
+                    APP_NAME        : "车巡警务协同",
+                    CxjwFileProvider: "com.hylink.chexunjingwu.contentprovider.CxjwFileProvider"
+
+            ]
             buildConfigField("String", "REG_ID", "\"330000100115\"")
             buildConfigField("String", "CLIENT_ID", "\"35D6F3BCDDC05176A39352D7F2747657\"")
 
         }
+
+
     }
 
     android.applicationVariants.all {
@@ -145,7 +109,7 @@ android {
             variant.outputs.all {
 //                variant.getPackageApplication().outputDirectory = new File(project.rootDir.absolutePath + '/outputs/' + versionName)  //指定apk输出目录
                 //这里修改apk文件名
-                outputFileName = "czxk_${versionName}_${variant.productFlavors[0].name}${variant.buildType.getName()}_v${versionCode}.apk"
+                outputFileName = "czxk${variant.productFlavors[0].name}_v.${versionName}_${variant.buildType.getName()}.apk"
             }
     }
 
